--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 ---
-abstract: 'Simple static web site maintenance'
+abstract: 'Update a static website'
 author:
   - 'Bernie Simon <bernie.simon@gmail.com>'
 build_requires:
@@ -27,14 +27,32 @@ no_index:
 provides:
   App::Followme:
     file: lib/App/Followme.pm
-    version: 0.89
-  App::FollowmeSite:
-    file: lib/App/FollowmeSite.pm
-    version: 0.89
+    version: 0.90
+  App::Followme::Common:
+    file: lib/App/Followme/Common.pm
+    version: 0.90
+  App::Followme::ConvertPages:
+    file: lib/App/Followme/ConvertPages.pm
+    version: 0.90
+  App::Followme::CreateIndexes:
+    file: lib/App/Followme/CreateIndexes.pm
+    version: 0.90
+  App::Followme::CreateNews:
+    file: lib/App/Followme/CreateNews.pm
+    version: 0.90
+  App::Followme::FormatPages:
+    file: lib/App/Followme/FormatPages.pm
+    version: 0.90
+  App::Followme::Initialize:
+    file: lib/App/Followme/Initialize.pm
+    version: 0.90
+  App::Followme::Mock:
+    file: lib/App/Followme/Mock.pm
+    version: 0.90
 requires:
   perl: 5.008005
 resources:
   bugtracker: https://github.com/Jinzang/App-Followme/issues
   homepage: https://github.com/Jinzang/App-Followme
   repository: https://github.com/Jinzang/App-Followme.git
-version: 0.89
+version: 0.90
