Import of JINZANG/App-Followme-0.93 from CPAN.
gitpan-cpan-distribution: App-Followme
gitpan-cpan-version:      0.93
gitpan-cpan-path:         JINZANG/App-Followme-0.93.tar.gz
gitpan-cpan-author:       JINZANG
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -27,32 +27,38 @@ no_index:
 provides:
   App::Followme:
     file: lib/App/Followme.pm
-    version: 0.92
-  App::Followme::Common:
-    file: lib/App/Followme/Common.pm
-    version: 0.92
-  App::Followme::ConvertPages:
-    file: lib/App/Followme/ConvertPages.pm
-    version: 0.92
-  App::Followme::CreateIndexes:
-    file: lib/App/Followme/CreateIndexes.pm
-    version: 0.92
+    version: 0.93
+  App::Followme::ConvertPage:
+    file: lib/App/Followme/ConvertPage.pm
+    version: 0.93
+  App::Followme::CreateIndex:
+    file: lib/App/Followme/CreateIndex.pm
+    version: 0.93
   App::Followme::CreateNews:
     file: lib/App/Followme/CreateNews.pm
-    version: 0.92
-  App::Followme::FormatPages:
-    file: lib/App/Followme/FormatPages.pm
-    version: 0.92
+    version: 0.93
+  App::Followme::EveryFile:
+    file: lib/App/Followme/EveryFile.pm
+    version: 0.93
+  App::Followme::FormatPage:
+    file: lib/App/Followme/FormatPage.pm
+    version: 0.93
+  App::Followme::HandleSite:
+    file: lib/App/Followme/HandleSite.pm
+    version: 0.93
   App::Followme::Initialize:
     file: lib/App/Followme/Initialize.pm
-    version: 0.92
+    version: 0.93
   App::Followme::Mock:
     file: lib/App/Followme/Mock.pm
-    version: 0.92
+    version: 0.93
+  App::Followme::MostRecentFile:
+    file: lib/App/Followme/MostRecentFile.pm
+    version: 0.93
 requires:
   perl: 5.008005
 resources:
   bugtracker: https://github.com/Jinzang/App-Followme/issues
   homepage: https://github.com/Jinzang/App-Followme
   repository: https://github.com/Jinzang/App-Followme.git
-version: 0.92
+version: 0.93
