--- a/META.yml
+++ b/META.yml
@@ -27,38 +27,39 @@ no_index:
 provides:
   App::Followme:
     file: lib/App/Followme.pm
-    version: 0.93
+    version: 0.94
   App::Followme::ConvertPage:
     file: lib/App/Followme/ConvertPage.pm
-    version: 0.93
+    version: 0.94
   App::Followme::CreateIndex:
     file: lib/App/Followme/CreateIndex.pm
-    version: 0.93
+    version: 0.94
   App::Followme::CreateNews:
     file: lib/App/Followme/CreateNews.pm
-    version: 0.93
+    version: 0.94
   App::Followme::EveryFile:
     file: lib/App/Followme/EveryFile.pm
-    version: 0.93
+    version: 0.94
   App::Followme::FormatPage:
     file: lib/App/Followme/FormatPage.pm
-    version: 0.93
+    version: 0.94
   App::Followme::HandleSite:
     file: lib/App/Followme/HandleSite.pm
-    version: 0.93
+    version: 0.94
   App::Followme::Initialize:
     file: lib/App/Followme/Initialize.pm
-    version: 0.93
+    version: 0.94
   App::Followme::Mock:
     file: lib/App/Followme/Mock.pm
-    version: 0.93
+    version: 0.94
   App::Followme::MostRecentFile:
     file: lib/App/Followme/MostRecentFile.pm
-    version: 0.93
+    version: 0.94
 requires:
+  Text::Markdown: 1.000031
   perl: 5.008005
 resources:
   bugtracker: https://github.com/Jinzang/App-Followme/issues
   homepage: https://github.com/Jinzang/App-Followme
   repository: https://github.com/Jinzang/App-Followme.git
-version: 0.93
+version: 0.94
