--- a/META.yml
+++ b/META.yml
@@ -27,46 +27,43 @@ no_index:
 provides:
   App::Followme:
     file: lib/App/Followme.pm
-    version: 1.03
+    version: 1.04
+  App::Followme::ConfiguredObject:
+    file: lib/App/Followme/ConfiguredObject.pm
+    version: 1.04
   App::Followme::ConvertPage:
     file: lib/App/Followme/ConvertPage.pm
-    version: 1.03
+    version: 1.04
   App::Followme::CreateIndex:
     file: lib/App/Followme/CreateIndex.pm
-    version: 1.03
+    version: 1.04
   App::Followme::CreateNews:
     file: lib/App/Followme/CreateNews.pm
-    version: 1.03
+    version: 1.04
   App::Followme::CreateSitemap:
     file: lib/App/Followme/CreateSitemap.pm
-    version: 1.03
-  App::Followme::EveryFile:
-    file: lib/App/Followme/EveryFile.pm
-    version: 1.03
+    version: 1.04
   App::Followme::FormatPage:
     file: lib/App/Followme/FormatPage.pm
-    version: 1.03
-  App::Followme::HandleSite:
-    file: lib/App/Followme/HandleSite.pm
-    version: 1.03
+    version: 1.04
   App::Followme::Initialize:
     file: lib/App/Followme/Initialize.pm
-    version: 1.03
-  App::Followme::MostRecentFile:
-    file: lib/App/Followme/MostRecentFile.pm
-    version: 1.03
+    version: 1.04
+  App::Followme::Module:
+    file: lib/App/Followme/Module.pm
+    version: 1.04
+  App::Followme::Template:
+    file: lib/App/Followme/Template.pm
+    version: 1.04
   App::Followme::UploadFtp:
     file: lib/App/Followme/UploadFtp.pm
-    version: 1.03
+    version: 1.04
   App::Followme::UploadNone:
     file: lib/App/Followme/UploadNone.pm
-    version: 1.03
+    version: 1.04
   App::Followme::UploadSite:
     file: lib/App/Followme/UploadSite.pm
-    version: 1.03
-  App::Followme::Variables:
-    file: lib/App/Followme/Variables.pm
-    version: 1.03
+    version: 1.04
 requires:
   Net::FTP: 0
   Text::Markdown: 1.000031
@@ -75,4 +72,4 @@ resources:
   bugtracker: https://github.com/Jinzang/App-Followme/issues
   homepage: https://github.com/Jinzang/App-Followme
   repository: https://github.com/Jinzang/App-Followme.git
-version: 1.03
+version: 1.04
