--- a/META.yml
+++ b/META.yml
@@ -5,11 +5,9 @@ author:
 build_requires:
   Test::More: 0.98
 configure_requires:
-  CPAN::Meta: 0
-  CPAN::Meta::Prereqs: 0
   Module::Build: 0.38
 dynamic_config: 0
-generated_by: 'Minilla/v0.15.2, CPAN::Meta::Converter version 2.130880'
+generated_by: 'Minilla/v2.3.0, CPAN::Meta::Converter version 2.133380'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -28,43 +26,43 @@ no_index:
 provides:
   App::Followme:
     file: lib/App/Followme.pm
-    version: 1.10
+    version: 1.11
   App::Followme::ConfiguredObject:
     file: lib/App/Followme/ConfiguredObject.pm
-    version: 1.10
+    version: 1.11
   App::Followme::ConvertPage:
     file: lib/App/Followme/ConvertPage.pm
-    version: 1.10
+    version: 1.11
   App::Followme::CreateIndex:
     file: lib/App/Followme/CreateIndex.pm
-    version: 1.10
+    version: 1.11
   App::Followme::CreateNews:
     file: lib/App/Followme/CreateNews.pm
-    version: 1.10
+    version: 1.11
   App::Followme::CreateSitemap:
     file: lib/App/Followme/CreateSitemap.pm
-    version: 1.10
+    version: 1.11
   App::Followme::FormatPage:
     file: lib/App/Followme/FormatPage.pm
-    version: 1.10
+    version: 1.11
   App::Followme::Initialize:
     file: lib/App/Followme/Initialize.pm
-    version: 1.10
+    version: 1.11
   App::Followme::Module:
     file: lib/App/Followme/Module.pm
-    version: 1.10
+    version: 1.11
   App::Followme::Template:
     file: lib/App/Followme/Template.pm
-    version: 1.10
+    version: 1.11
   App::Followme::UploadFtp:
     file: lib/App/Followme/UploadFtp.pm
-    version: 1.10
+    version: 1.11
   App::Followme::UploadNone:
     file: lib/App/Followme/UploadNone.pm
-    version: 1.10
+    version: 1.11
   App::Followme::UploadSite:
     file: lib/App/Followme/UploadSite.pm
-    version: 1.10
+    version: 1.11
 requires:
   Net::FTP: 0
   Text::Markdown: 1.000031
@@ -72,5 +70,5 @@ requires:
 resources:
   bugtracker: https://github.com/Jinzang/App-Followme/issues
   homepage: https://github.com/Jinzang/App-Followme
-  repository: https://github.com/Jinzang/App-Followme.git
-version: 1.10
+  repository: git://github.com/Jinzang/App-Followme.git
+version: 1.11
